Clean
Signed-off-by: Hadrien <hadrien.godard@artelys.com>